# chrisjen

./: .gitignore  README.md  pyproject.toml
chrisjen/: __init__.py  arrays.py  base.py  bases.py  bunch.py  components.py  composites.py  configuration.py  containers.py  convert.py  default.py  designs.py  directors.py  filing.py  foundry.py  framework.py  graph.py  graphs.py  interface.py  managers.py  manifest.py  nodes.py  proxy.py  settings.py  stages.py  tasks.py  tracking.py  tree.py  trees.py  types.py  utilities.py  views.py  workers.py  workshop.py
chrisjen/core/: base.py  design.py  filing.py  foundry.py  framework.py  interface.py  keystones.py  nodes.py  resources.py  tasks.py  validators.py  views.py  workers.py  workshop.py
chrisjen/options/: design.py  export.py  librarians.py  managers.py  nodes.py  repository.py  represent.py  research.py  stages.py  supervisers.py  tasks.py  validators.py  views.py  workers.py  workflows.py  workshop.py
chrisjen/variants/: design.py  directors.py  nodes.py  repository.py  stages.py  tasks.py  workers.py
tests/: cancer_settings.ini  dag.dot  project_settings.py  test.dot  test_containers.py  test_interface.py  test_project.py  test_structures.py  test_views.py  test_workflow.py
