[tool.poetry]
name = "chrisjen"
version = "0.1.2"
description = "Python project workflows made easy"
authors = ["Corey Rayburn Yung <coreyrayburnyung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/WithPrecedent/chrisjen"
repository = "https://github.com/WithPrecedent/chrisjen"

[tool.poetry.dependencies]
python = "^3.9"
more_itertools = "^9.0.0"
amos = "^0.1.10"
bobbie = "0.1.1"
holden = "^0.1.1"
miller = "^0.1.2"
nagata = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
