[tool.poetry]
name = "chrisjen"
version = "0.1.3"
description = "Python project workflows made easy"
authors = ["Corey Rayburn Yung <coreyrayburnyung@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/WithPrecedent/chrisjen"
repository = "https://github.com/WithPrecedent/chrisjen"

[tool.poetry.dependencies]
python = "^3.9"
more_itertools = "^9.0.0"
ashford = "^0.1.2" 
bobbie = "^0.1.3"
camina = "^0.1.10"
holden = "^0.1.6"
miller = "^0.1.6"
nagata = "^0.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
